リンク誤りの修正

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        © {{ page.date.getFullYear() }} Makoto Sugawara
+        © {{ page.date.getFullYear() }} MAKOTO SUGAWARA
     </footer>
 </body>
 </html>
